# tastecraft-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml
migrations/: 1_setup.sql
src/: api.rs  config.rs  db.rs  main.rs
src/models/: recipes.rs  test.rs
src/services/: mod.rs  openai.rs  recipes.rs
